style: fix whitespace removing between elements

--- a/src/components/Credits/Credits.scss
+++ b/src/components/Credits/Credits.scss
@@ -21,6 +21,7 @@
     font-weight: 400;
     line-height: 26px;
     transition: inherit;
+    white-space: pre;
 
     @media screen and (max-width: 1440px) {
       font-size: 14px;
